--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,6 @@ margin: 5px auto 5px auto;
 /*Map*/
 div#map {width: 100%; height: 70%; }
 
-#pac-input{
-margin: 5px;
-}
-
 /*Navbar*/
 
 .navbar-fixed-top{
@@ -51,9 +47,17 @@ float: right;
 
 button#trafficToggle{
 margin 5px;
+padding: 5px;
 }
 
-
+#searchPanel {
+	display: inline-block;
+    padding: 20px;
+    text-align: center;
+    font-family: 'Roboto','sans-serif';
+    line-height: 30px;
+    margin: auto;
+      }
 /*Footer*/
 
 .full {
